--- a/connect/templates/result.html
+++ b/connect/templates/result.html
@@ -3,27 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>처리 결과</title>
+    <title>Result</title>
     <style>
-        .scaled-image {
-            width: 10%; /* 이미지 크기를 원본 크기의 10%로 축소 */
-            height: auto; /* 비율 유지 */
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            padding: 20px;
+        }
+        img {
+            max-width: 100%;
+            height: auto;
+            margin-top: 20px;
         }
     </style>
-    <script>
-        // 페이지가 로드될 때마다 자동 새로 고침 설정
-        function autoRefresh() {
-            setTimeout(function() {
-                window.location.reload();
-            }, 5000); // 5000ms = 5초
-        }
-        window.onload = autoRefresh;
-    </script>
 </head>
 <body>
     <h1>처리 결과</h1>
     <h2>예측: {{ prediction }}</h2>
-    <img src="{{ image }}" alt="처리된 이미지" class="scaled-image">
     <br>
     <a href="{{ url_for('index') }}">돌아가기</a>
 </body>
