--- a/app/src/main/res/layout/popup.xml
+++ b/app/src/main/res/layout/popup.xml
@@ -20,7 +20,7 @@
         android:id="@+id/dialogMessage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="최대한 움직이지 않고 사진을 찍으세요."
+        android:text="최대한 움직이지 말고 사진을 찍으세요."
         android:textSize="16sp"
         android:layout_marginBottom="16dp"/>
 
